refactor: Add SuccessMessage helper and apply it

--- a/Ovning16/Components/Helpers/LinkButton.razor
+++ b/Ovning16/Components/Helpers/LinkButton.razor
@@ -1,6 +1,6 @@
 ﻿
 
-<a class="btn btn-outline-primary mt-1 mb-1" href="@Href">@ChildContent</a>
+<a class="btn btn-outline-primary mt-1 mb-1 ms-1 me-1" href="@Href">@ChildContent</a>
 
 @code {
     [Parameter]
