--- a/Ovning16/Components/Helpers/StatusBadge.razor
+++ b/Ovning16/Components/Helpers/StatusBadge.razor
@@ -2,11 +2,11 @@
 
 @if (Status)
 {
-    <div class="btn btn-success">Online</div>
+    <span class="btn disabled btn-success">Online</span>
 }
 else
 {
-    <div class="btn btn-danger">Offline</div>
+    <span class="btn disabled btn-danger">Offline</span>
 }
 
 @code {
