--- a/Ovning16/Components/Pages/EditDevice.razor
+++ b/Ovning16/Components/Pages/EditDevice.razor
@@ -4,50 +4,53 @@
 <div class="container-fluid">
 <MainHeader>Edit instrument details</MainHeader>
 <LookForDevice DeviceDataService="@DeviceDataService" DeviceGuid="@DeviceGuid" SetDevice="@SetDevice">
+<SuccessMessage Saved="@Saved" Message="Device successfully edited" LinkHrefsAndTexts="@LinkHrefsAndTexts">
 
-    <EditForm Enhance id="EditDeviceForm" Model="DeviceUpdateDTO" FormName="EditDeviceForm" OnSubmit="@HandleSubmit">
-        <div class="row mb-3 align-items-center">
-            <label for="guid" class="col-form-label col-sm-2">Device ID: </label>
-            <div class="col-sm-10">
-                <input type="text" disabled id="guid" class="form-control" value="@Device.DeviceGuid" />
-            </div>
+<EditForm Enhance id="EditDeviceForm" Model="DeviceUpdateDTO" FormName="EditDeviceForm" OnSubmit="@HandleSubmit">
+    <div class="row mb-3 align-items-center">
+        <label for="guid" class="col-form-label col-sm-2">Device ID: </label>
+        <div class="col-sm-10">
+            <input type="text" disabled id="guid" class="form-control" value="@Device.DeviceGuid" />
         </div>
-
-        <div class="row mb-3 align-items-center">
-            <label for="name" class="col-form-label col-sm-2">Name: </label>
-            <div class="col-sm-10">
-                <InputText id="name" class="form-control" @bind-Value="@DeviceUpdateDTO.Name" placeholder="@Device.Name"></InputText>
-            </div>
-        </div>
-
-        <div class="row mb-3 align-items-center">
-            <label for="name" class="col-form-label col-sm-2">Nickname (optional): </label>
-            <div class="col-sm-10">
-                <InputText id="name" class="form-control" @bind-Value="@DeviceUpdateDTO.NickName" placeholder="@(Device.NickName is null ? string.Empty : Device.NickName)"></InputText>
-            </div>
-        </div>
-
-        <div class="row mb-3 align-items-center">
-            <label for="description" class="col-form-label col-sm-2">Description: </label>
-            <div class="col-sm-10">
-                <InputText id="description" class="form-control" @bind-Value="@DeviceUpdateDTO.Description" placeholder="@Device.Description"></InputText>
-            </div>
-        </div>
-
-        <div class="row mb-3 align-items-center">
-            <label for="isOnline" class="col-form-label col-sm-2">Status: </label>
-            <div class="col-sm-10">
-                <input type="checkbox" disabled id="isOnline" class="form-check-input" checked="@Device.IsOnline" />
-            </div>
-        </div>
-    </EditForm>
-
-    <div class="container-fluid mt-2">
-        <button type="submit" form="EditDeviceForm" class="btn btn-primary">Save details</button>
-        <LinkButton Href="@($"editdevice/{Device.DeviceGuid}")">Edit device</LinkButton>
-        <LinkButton Href="@($"deletedevice/{Device.DeviceGuid}")">Delete device</LinkButton>
-        <LinkButton Href="/">Back to overview</LinkButton>
     </div>
 
+    <div class="row mb-3 align-items-center">
+        <label for="name" class="col-form-label col-sm-2">Name: </label>
+        <div class="col-sm-10">
+            <InputText id="name" class="form-control" @bind-Value="@DeviceUpdateDTO.Name" placeholder="@Device.Name"></InputText>
+        </div>
+    </div>
+
+    <div class="row mb-3 align-items-center">
+        <label for="name" class="col-form-label col-sm-2">Nickname (optional): </label>
+        <div class="col-sm-10">
+            <InputText id="name" class="form-control" @bind-Value="@DeviceUpdateDTO.NickName" placeholder="@(Device.NickName is null ? string.Empty : Device.NickName)"></InputText>
+        </div>
+    </div>
+
+    <div class="row mb-3 align-items-center">
+        <label for="description" class="col-form-label col-sm-2">Description: </label>
+        <div class="col-sm-10">
+            <InputText id="description" class="form-control" @bind-Value="@DeviceUpdateDTO.Description" placeholder="@Device.Description"></InputText>
+        </div>
+    </div>
+
+    <div class="row mb-3 align-items-center">
+        <label for="isOnline" class="col-form-label col-sm-2">Status: </label>
+        <div class="col-sm-10">
+            <input type="checkbox" disabled id="isOnline" class="form-check-input" checked="@Device.IsOnline" />
+        </div>
+    </div>
+</EditForm>
+
+<div class="container-fluid mt-2">
+    <button type="submit" form="EditDeviceForm" class="btn btn-primary">Save details</button>
+    @foreach (var (href, text) in LinkHrefsAndTexts)
+    {
+        <LinkButton Href="@href">@text</LinkButton>
+    }
+</div>
+
+</SuccessMessage>
 </LookForDevice>
 </div>
